--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,3 +1,42 @@
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #282c34;
+    color: white;
+    padding: 0 2rem;
+    height: 10vh;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+nav button {
+    background-color: #282c34;
+    color: white;
+    border: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+}
+
+nav button:hover {
+    background-color: #282c34;
+    color: #61dafb;
+}
+
+nav button:active {
+    background-color: #282c34;
+    color: #61dafb;
+}
+
+nav button:disabled {
+    background-color: #282c34;
+    color: #61dafb;
+    cursor: not-allowed;
+}
+
 .container{
     position: relative;
     width: 100%;
@@ -9,19 +48,7 @@
     display: inline-block;
     width: 8px;
     height: 100px;
-    background-color: #000000;
+    background-color: #61dafb;
     margin-right: 2px;
 }
 
-button{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 100px;
-    height: 50px;
-    background-color: #000000;
-    color: #ffffff;
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
