--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,54 +1,108 @@
-nav{
+body {
+    background-color: #222;
+    color: #fff;
+    font-family: Arial, sans-serif;
+}
+  
+nav {
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #282c34;
-    color: white;
-    padding: 0 2rem;
-    height: 10vh;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
+    padding: 0 20px;
 }
-
+  
 nav button {
-    background-color: #282c34;
-    color: white;
+    background-color: #555;
+    color: #fff;
     border: none;
-    font-size: 1.5rem;
-    font-weight: bold;
+    padding: 8px 12px;
+    font-size: 16px;
     cursor: pointer;
-    outline: none;
+    border-radius: 4px;
+    margin-right: 20px;
 }
 
 nav button:hover {
-    background-color: #282c34;
-    color: #61dafb;
+    background-color: #777;
 }
 
-nav button:active {
-    background-color: #282c34;
-    color: #61dafb;
+.sorting-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 }
 
-nav button:disabled {
-    background-color: #282c34;
-    color: #61dafb;
-    cursor: not-allowed;
+.box {
+    background-color: #141414;
+    padding: 30px;
+    margin: 20px;
+    border-radius: 13px;
+    margin-top: 40px;
 }
 
-.container{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-end;
+    
+}
+  
+.bar {
+    width: 14px;
+    margin: 0 2px;
+    background-color: #61ddffa4;
+    transition: height 0.2s;
+}
+  
+
+.bar.highlight {
+    background-color: #ff6b6b;
+}
+  
+.bar.swapping {
+    background-color: #ffd166;
+}
+  
+.bar.sorted {
+    background-color: #06d6a0;
 }
 
-.bar{
-    display: inline-block;
-    width: 8px;
-    height: 100px;
-    background-color: #61dafb;
-    margin-right: 2px;
+@media screen and (max-width: 1600px) {
+    .bar {
+      width: 10px;
+      margin: 2px;
+    }
 }
 
+@media screen and (max-width: 1300px) {
+    .bar {
+      width: 8px;
+      margin: 2px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .bar {
+      width: 6px;
+      margin: 2px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .bar {
+      width: 3px;
+      margin: 2px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .bar {
+      width: 2px;
+      margin: 2px;
+    }
+}
+  
