--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,69 +1,68 @@
 body {
-    background-color: #222;
+    background-color: #0b0b0b;
     color: #fff;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+
 }
   
 nav {
-    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 2rem;
 }
   
 nav button {
-    background-color: #555;
+    background-color: #141414;
+    backdrop-filter: blur(50px);
     color: #fff;
-    border: none;
-    padding: 8px 12px;
-    font-size: 16px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
     cursor: pointer;
     border-radius: 4px;
-    margin-right: 20px;
+    border: 2px solid rgba(255,255,255,0.1);
+    transition: all 0.2s ease-in-out;
 }
 
 nav button:hover {
-    background-color: #777;
+   border: 2px solid rgba(255,255,255,0.3);
 }
 
 .sorting-buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
 }
+
 
 .box {
     background-color: #141414;
-    padding: 30px;
-    margin: 20px;
-    border-radius: 13px;
-    margin-top: 40px;
-}
-
-
-.container {
+    margin: 0 2rem;
+    padding: 1rem;
+    border-radius: 4px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-end;
-    
+    height: 700px;
 }
+
   
 .bar {
-    width: 14px;
-    margin: 0 2px;
+    width: 6px;
+    margin: 0 0.5px;
     background-color: #61ddffd8;
-    transition: height 0.1s;
 }
 
 .speed-box{
-    background-color: #555;
+    background-color: #141414;
     border-radius: 4px;
-    padding: 8px 12px;
+    padding: 0.5rem 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid rgba(255,255,255,0.1);
+
 }
 
 nav label{
@@ -71,45 +70,51 @@ nav label{
     margin-right: 10px;
 }
 
-/* speed input */
 .speed-input {
     color: #fff;
     border: 2px solid #61ddffd8;
     border-radius: 4px;
 }
 
-@media screen and (max-width: 1600px) {
-    .bar {
-      width: 10px;
-      margin: 2px;
+.button.disabled{
+    opacity: 0.5;
+    border: 2px solid rgba(255,255,255,0.1);
+    cursor: not-allowed;
+}
+
+.button.disabled:hover{
+    border: 2px solid rgba(255,255,255,0.1);
+}
+
+@media (max-width: 1200px){
+    nav button {
+        padding: 0.2rem 0.8rem;
+        font-size: 0.8rem;
+    }
+    .speed-box{
+        padding: 0.2rem 0.8rem;
+        font-size: 0.8rem;
     }
 }
 
-@media screen and (max-width: 1300px) {
-    .bar {
-      width: 8px;
-      margin: 2px;
-    }
+@media (max-width: 950px){
+    nav {
+    flex-direction: column;
+    align-items:flex-start;
+    gap: 1rem;
+    padding: 2rem;
+}
 }
 
-@media screen and (max-width: 1100px) {
-    .bar {
-      width: 6px;
-      margin: 2px;
-    }
-}
 
-@media screen and (max-width: 950px) {
+@media (max-width: 400px){
     .bar {
-      width: 3px;
-      margin: 2px;
+    width: 2px;
+    margin: 0;
+    }
+    .sorting-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     }
 }
-
-@media screen and (max-width: 700px) {
-    .bar {
-      width: 2px;
-      margin: 2px;
-    }
-}
-  
